@@ -316,6 +316,7 @@ TS_WIN_GUID(CLSID_MSVidWebDVDAdm, 0xfa7c375b, 0x66a7, 0x4280, 0x87, 0x9d, 0xfd, 
 TS_WIN_GUID(CLSID_MSVidWebDVDToAudioRenderer, 0x8d04238e, 0x9fd1, 0x41c6, 0x8d, 0xe3, 0x9e, 0x1e, 0xe3, 0x9, 0xe9, 0x35);
 TS_WIN_GUID(CLSID_MSVidWebDVDToVideoRenderer, 0x267db0b3, 0x55e3, 0x4902, 0x94, 0x9b, 0xdf, 0x8f, 0x5c, 0xec, 0x01, 0x91);
 TS_WIN_GUID(CLSID_MSVidXDS, 0x149eedf, 0xd08f, 0x4142, 0x8d, 0x73, 0xd2, 0x39, 0x3, 0xd2, 0x1e, 0x90);
+TS_WIN_GUID(CLSID_NetworkProvider, 0xB2F3A67C, 0x29DA, 0x4C78, 0x88, 0x31, 0x09, 0x1E, 0xD5, 0x09, 0xA4, 0x75);
 TS_WIN_GUID(CLSID_NullRenderer, 0xc1f400a4, 0x3f08, 0x11d3, 0x9f, 0x0b, 0x00, 0x60, 0x08, 0x03, 0x9e, 0x37);
 TS_WIN_GUID(CLSID_OverlayMixer, 0xcd8743a1, 0x3736, 0x11d0, 0x9e, 0x69, 0x00, 0xc0, 0x4f, 0xd7, 0xc1, 0x5b);
 TS_WIN_GUID(CLSID_PerformanceProperties, 0x59ce6880, 0xacf8, 0x11cf, 0xb5, 0x6e, 0x00, 0x80, 0xc7, 0xc4, 0xb6, 0x8a);
